[gd_scene load_steps=10 format=3 uid="uid://41nya1hpni78"]

[ext_resource type="TileSet" uid="uid://qb3qobjripr6" path="res://games/type_wizard/type_wizard.tres" id="1_8q3ap"]
[ext_resource type="Script" path="res://games/type_wizard/type_room.gd" id="1_vaoo0"]
[ext_resource type="Script" path="res://games/type_wizard/TypeDoor.gd" id="2_85l8b"]
[ext_resource type="PackedScene" uid="uid://cr8ki2xhv8i73" path="res://games/type_wizard/typed/typed_word.tscn" id="2_hr713"]
[ext_resource type="Script" path="res://games/type_wizard/EnemySpawner.gd" id="5_ucxci"]
[ext_resource type="PackedScene" uid="uid://bvdul7olno8c2" path="res://games/type_wizard/typed/type_enemy.tscn" id="6_6hvwm"]
[ext_resource type="PackedScene" uid="uid://djxy0fp1fil6b" path="res://games/type_wizard/typed/type_enemy_spawner.tscn" id="7_13au6"]
[ext_resource type="PackedScene" uid="uid://ny16v8jmkvch" path="res://games/type_wizard/typed/type_enemy_throw.tscn" id="8_mflrm"]
[ext_resource type="Script" path="res://games/type_wizard/DataManager.gd" id="9_eau8a"]

[node name="TypeRoom" type="Node2D"]
script = ExtResource("1_vaoo0")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_8q3ap")
format = 2
layer_0/tile_data = PackedInt32Array(-524306, 0, 4, -524305, 0, 4, -458768, 0, 4, -458767, 0, 4, -393230, 0, 4, -393229, 0, 4, -327693, 0, 4, -327692, 0, 4, -262155, 0, 4, -262154, 0, 4, -196617, 0, 4, -131080, 0, 4, -65543, 0, 4, -6, 0, 4, -5, 0, 4, 65531, 0, 4, 65532, 0, 4, 131069, 0, 4, 196605, 0, 4, 196606, 0, 4, 262143, 0, 4, 262144, 0, 4, 327681, 0, 4, 327682, 0, 4, 393218, 0, 4, 393219, 0, 4, 458755, 0, 4, 458756, 0, 4, 458757, 0, 4, 524294, 0, 4, -458770, 0, 4, -393234, 0, 4, -327698, 0, 4, -262162, 0, 4, -196626, 0, 4, -131090, 0, 4, -65554, 0, 4, -18, 0, 4, 65518, 0, 4, 131054, 0, 4, 196590, 0, 4, 262126, 0, 4, 327662, 0, 4, 393198, 0, 4, 458734, 0, 4, 524270, 0, 4, 589806, 0, 4, 655342, 0, 4, 720878, 0, 4, -458769, 0, 4, -393233, 0, 4, -327697, 0, 4, -262161, 0, 4, -196625, 0, 4, -131089, 0, 4, -65553, 0, 4, -17, 0, 4, 65519, 0, 4, 131055, 0, 4, 196591, 0, 4, 262127, 0, 4, 327663, 0, 4, 393199, 0, 4, 458735, 0, 4, 524271, 0, 4, 589807, 0, 4, 655343, 0, 4, 720879, 0, 4, -524304, 0, 4, -393232, 0, 4, -327696, 0, 4, -262160, 0, 4, -196624, 0, 4, -131088, 0, 4, -65552, 0, 4, -16, 0, 4, 65520, 0, 4, 131056, 0, 4, 196592, 0, 4, 262128, 0, 4, 327664, 0, 4, 393200, 0, 4, 458736, 0, 4, 524272, 0, 4, 589808, 0, 4, 655344, 0, 4, 720880, 0, 4, -524303, 0, 4, -393231, 0, 4, -327695, 0, 4, -262159, 0, 4, -196623, 0, 4, -131087, 0, 4, -65551, 0, 4, -15, 0, 4, 65521, 0, 4, 131057, 0, 4, 196593, 0, 4, 262129, 0, 4, 327665, 0, 4, 393201, 0, 4, 458737, 0, 4, 524273, 0, 4, 589809, 0, 4, 655345, 0, 4, 720881, 0, 4, -524302, 0, 4, -458766, 0, 4, -327694, 0, 4, -262158, 0, 4, -196622, 0, 4, -131086, 0, 4, -65550, 0, 4, -14, 0, 4, 65522, 0, 4, 131058, 0, 4, 196594, 0, 4, 262130, 0, 4, 327666, 0, 4, 393202, 0, 4, 458738, 0, 4, 524274, 0, 4, 589810, 0, 4, 655346, 0, 4, 720882, 0, 4, -524301, 0, 4, -458765, 0, 4, -262157, 0, 4, -196621, 0, 4, -131085, 0, 4, -65549, 0, 4, -13, 0, 4, 65523, 0, 4, 131059, 0, 4, 196595, 0, 4, 262131, 0, 4, 327667, 0, 4, 393203, 0, 4, 458739, 0, 4, 524275, 0, 4, 589811, 0, 4, 655347, 0, 4, 720883, 0, 4, -524300, 0, 4, -458764, 0, 4, -393228, 0, 4, -262156, 0, 4, -196620, 0, 4, -131084, 0, 4, -65548, 0, 4, -12, 0, 4, 65524, 0, 4, 131060, 0, 4, 196596, 0, 4, 262132, 0, 4, 327668, 0, 4, 393204, 0, 4, 458740, 0, 4, 524276, 0, 4, 589812, 0, 4, 655348, 0, 4, 720884, 0, 4, -524299, 0, 4, -458763, 0, 4, -393227, 0, 4, -327691, 0, 4, -196619, 0, 4, -131083, 0, 4, -65547, 0, 4, -11, 0, 4, 65525, 0, 4, 131061, 0, 4, 196597, 0, 4, 262133, 0, 4, 327669, 0, 4, 393205, 0, 4, 458741, 0, 4, 524277, 0, 4, 589813, 0, 4, 655349, 0, 4, 720885, 0, 4, -524298, 0, 4, -458762, 0, 4, -393226, 0, 4, -327690, 0, 4, -196618, 0, 4, -131082, 0, 4, -65546, 0, 4, -10, 0, 4, 65526, 0, 4, 131062, 0, 4, 196598, 0, 4, 262134, 0, 4, 327670, 0, 4, 393206, 0, 4, 458742, 0, 4, 524278, 0, 4, 589814, 0, 4, 655350, 0, 4, 720886, 0, 4, -524297, 0, 4, -458761, 0, 4, -393225, 0, 4, -327689, 0, 4, -262153, 0, 4, -131081, 0, 4, -65545, 0, 4, -9, 0, 4, 65527, 0, 4, 131063, 0, 4, 196599, 0, 4, 262135, 0, 4, 327671, 0, 4, 393207, 0, 4, 458743, 0, 4, 524279, 0, 4, 589815, 0, 4, 655351, 0, 4, 720887, 0, 4, -524296, 0, 4, -458760, 0, 4, -393224, 0, 4, -327688, 0, 4, -262152, 0, 4, -196616, 0, 4, -65544, 0, 4, -8, 0, 4, 65528, 0, 4, 131064, 0, 4, 196600, 0, 4, 262136, 0, 4, 327672, 0, 4, 393208, 0, 4, 458744, 0, 4, 524280, 0, 4, 589816, 0, 4, 655352, 0, 4, 720888, 0, 4, -524295, 0, 4, -458759, 0, 4, -393223, 0, 4, -327687, 0, 4, -262151, 0, 4, -196615, 0, 4, -131079, 0, 4, -7, 0, 4, 65529, 0, 4, 131065, 0, 4, 196601, 0, 4, 262137, 0, 4, 327673, 0, 4, 393209, 0, 4, 458745, 0, 4, 524281, 0, 4, 589817, 0, 4, 655353, 0, 4, 720889, 0, 4, -524294, 0, 4, -458758, 0, 4, -393222, 0, 4, -327686, 0, 4, -262150, 0, 4, -196614, 0, 4, -131078, 0, 4, -65542, 0, 4, 65530, 0, 4, 131066, 0, 4, 196602, 0, 4, 262138, 0, 4, 327674, 0, 4, 393210, 0, 4, 458746, 0, 4, 524282, 0, 4, 589818, 0, 4, 655354, 0, 4, 720890, 0, 4, -524293, 0, 4, -458757, 0, 4, -393221, 0, 4, -327685, 0, 4, -262149, 0, 4, -196613, 0, 4, -131077, 0, 4, -65541, 0, 4, 131067, 0, 4, 196603, 0, 4, 262139, 0, 4, 327675, 0, 4, 393211, 0, 4, 458747, 0, 4, 524283, 0, 4, 589819, 0, 4, 655355, 0, 4, 720891, 0, 4, -524292, 0, 4, -458756, 0, 4, -393220, 0, 4, -327684, 0, 4, -262148, 0, 4, -196612, 0, 4, -131076, 0, 4, -65540, 0, 4, -4, 0, 4, 131068, 0, 4, 196604, 0, 4, 262140, 0, 4, 327676, 0, 4, 393212, 0, 4, 458748, 0, 4, 524284, 0, 4, 589820, 0, 4, 655356, 0, 4, 720892, 0, 4, -524291, 0, 4, -458755, 0, 4, -393219, 0, 4, -327683, 0, 4, -262147, 0, 4, -196611, 0, 4, -131075, 0, 4, -65539, 0, 4, -3, 0, 4, 65533, 0, 4, 262141, 0, 4, 327677, 0, 4, 393213, 0, 4, 458749, 0, 4, 524285, 0, 4, 589821, 0, 4, 655357, 0, 4, 720893, 0, 4, -524290, 0, 4, -458754, 0, 4, -393218, 0, 4, -327682, 0, 4, -262146, 0, 4, -196610, 0, 4, -131074, 0, 4, -65538, 0, 4, -2, 0, 4, 65534, 0, 4, 131070, 0, 4, 262142, 0, 4, 327678, 0, 4, 393214, 0, 4, 458750, 0, 4, 524286, 0, 4, 589822, 0, 4, 655358, 0, 4, 720894, 0, 4, -524289, 0, 4, -458753, 0, 4, -393217, 0, 4, -327681, 0, 4, -262145, 0, 4, -196609, 0, 4, -131073, 0, 4, -65537, 0, 4, -1, 0, 4, 65535, 0, 4, 131071, 0, 4, 196607, 0, 4, 327679, 0, 4, 393215, 0, 4, 458751, 0, 4, 524287, 0, 4, 589823, 0, 4, 655359, 0, 4, 720895, 0, 4, -589824, 0, 4, -524288, 0, 4, -458752, 0, 4, -393216, 0, 4, -327680, 0, 4, -262144, 0, 4, -196608, 0, 4, -131072, 0, 4, -65536, 0, 4, 0, 0, 4, 65536, 0, 4, 131072, 0, 4, 196608, 0, 4, 327680, 0, 4, 393216, 0, 4, 458752, 0, 4, 524288, 0, 4, 589824, 0, 4, 655360, 0, 4, -589823, 0, 4, -524287, 0, 4, -458751, 0, 4, -393215, 0, 4, -327679, 0, 4, -262143, 0, 4, -196607, 0, 4, -131071, 0, 4, -65535, 0, 4, 1, 0, 4, 65537, 0, 4, 131073, 0, 4, 196609, 0, 4, 262145, 0, 4, 393217, 0, 4, 458753, 0, 4, 524289, 0, 4, 589825, 0, 4, 655361, 0, 4, -589822, 0, 4, -524286, 0, 4, -458750, 0, 4, -393214, 0, 4, -327678, 0, 4, -262142, 0, 4, -196606, 0, 4, -131070, 0, 4, -65534, 0, 4, 2, 0, 4, 65538, 0, 4, 131074, 0, 4, 196610, 0, 4, 262146, 0, 4, 458754, 0, 4, 524290, 0, 4, 589826, 0, 4, 655362, 0, 4, -589821, 0, 4, -524285, 0, 4, -458749, 0, 4, -393213, 0, 4, -327677, 0, 4, -262141, 0, 4, -196605, 0, 4, -131069, 0, 4, -65533, 0, 4, 3, 0, 4, 65539, 0, 4, 131075, 0, 4, 196611, 0, 4, 262147, 0, 4, 327683, 0, 4, 524291, 0, 4, 589827, 0, 4, 655363, 0, 4, -589820, 0, 4, -524284, 0, 4, -458748, 0, 4, -393212, 0, 4, -327676, 0, 4, -262140, 0, 4, -196604, 0, 4, -131068, 0, 4, -65532, 0, 4, 4, 0, 4, 65540, 0, 4, 131076, 0, 4, 196612, 0, 4, 262148, 0, 4, 327684, 0, 4, 393220, 0, 4, 524292, 0, 4, 589828, 0, 4, 655364, 0, 4, -589819, 0, 4, -524283, 0, 4, -458747, 0, 4, -393211, 0, 4, -327675, 0, 4, -262139, 0, 4, -196603, 0, 4, -131067, 0, 4, -65531, 0, 4, 5, 0, 4, 65541, 0, 4, 131077, 0, 4, 196613, 0, 4, 262149, 0, 4, 327685, 0, 4, 393221, 0, 4, 524293, 0, 4, 589829, 0, 4, 655365, 0, 4, -589818, 0, 4, -524282, 0, 4, -458746, 0, 4, -393210, 0, 4, -327674, 0, 4, -262138, 0, 4, -196602, 0, 4, -131066, 0, 4, -65530, 0, 4, 6, 0, 4, 65542, 0, 4, 131078, 0, 4, 196614, 0, 4, 262150, 0, 4, 327686, 0, 4, 393222, 0, 4, 458758, 0, 4, 589830, 0, 4, 655366, 0, 4, -589817, 0, 4, -524281, 0, 4, -458745, 0, 4, -393209, 0, 4, -327673, 0, 4, -262137, 0, 4, -196601, 0, 4, -131065, 0, 4, -65529, 0, 4, 7, 0, 4, 65543, 0, 4, 131079, 0, 4, 196615, 0, 4, 262151, 0, 4, 327687, 0, 4, 393223, 0, 4, 458759, 0, 4, 524295, 0, 4, 589831, 0, 4, 655367, 0, 4, -589816, 0, 4, -524280, 0, 4, -458744, 0, 4, -393208, 0, 4, -327672, 0, 4, -262136, 0, 4, -196600, 0, 4, -131064, 0, 4, -65528, 0, 4, 8, 0, 4, 65544, 0, 4, 131080, 0, 4, 196616, 0, 4, 262152, 0, 4, 327688, 0, 4, 393224, 0, 4, 458760, 0, 4, 524296, 0, 4, 589832, 0, 4, 655368, 0, 4, -589815, 0, 4, -524279, 0, 4, -458743, 0, 4, -393207, 0, 4, -327671, 0, 4, -262135, 0, 4, -196599, 0, 4, -131063, 0, 4, -65527, 0, 4, 9, 0, 4, 65545, 0, 4, 131081, 0, 4, 196617, 0, 4, 262153, 0, 4, 327689, 0, 4, 393225, 0, 4, 458761, 0, 4, 524297, 0, 4, 589833, 0, 4, 655369, 0, 4, -589814, 0, 4, -524278, 0, 4, -458742, 0, 4, -393206, 0, 4, -327670, 0, 4, -262134, 0, 4, -196598, 0, 4, -131062, 0, 4, -65526, 0, 4, 10, 0, 4, 65546, 0, 4, 131082, 0, 4, 196618, 0, 4, 262154, 0, 4, 327690, 0, 4, 393226, 0, 4, 458762, 0, 4, 524298, 0, 4, 589834, 0, 4, 655370, 0, 4, -589813, 0, 4, -524277, 0, 4, -458741, 0, 4, -393205, 0, 4, -327669, 0, 4, -262133, 0, 4, -196597, 0, 4, -131061, 0, 4, -65525, 0, 4, 11, 0, 4, 65547, 0, 4, 131083, 0, 4, 196619, 0, 4, 262155, 0, 4, 327691, 0, 4, 393227, 0, 4, 458763, 0, 4, 524299, 0, 4, 589835, 0, 4, 655371, 0, 4, -589812, 0, 4, -524276, 0, 4, -458740, 0, 4, -393204, 0, 4, -327668, 0, 4, -262132, 0, 4, -196596, 0, 4, -131060, 0, 4, -65524, 0, 4, 12, 0, 4, 65548, 0, 4, 131084, 0, 4, 196620, 0, 4, 262156, 0, 4, 327692, 0, 4, 393228, 0, 4, 458764, 0, 4, 524300, 0, 4, 589836, 0, 4, 655372, 0, 4, -589811, 0, 4, -524275, 0, 4, -458739, 0, 4, -393203, 0, 4, -327667, 0, 4, -262131, 0, 4, -196595, 0, 4, -131059, 0, 4, -65523, 0, 4, 13, 0, 4, 65549, 0, 4, 131085, 0, 4, 196621, 0, 4, 262157, 0, 4, 327693, 0, 4, 393229, 0, 4, 458765, 0, 4, 524301, 0, 4, 589837, 0, 4, 655373, 0, 4, -589810, 0, 4, -524274, 0, 4, -458738, 0, 4, -393202, 0, 4, -327666, 0, 4, -262130, 0, 4, -196594, 0, 4, -131058, 0, 4, -65522, 0, 4, 14, 0, 4, 65550, 0, 4, 131086, 0, 4, 196622, 0, 4, 262158, 0, 4, 327694, 0, 4, 393230, 0, 4, 458766, 0, 4, 524302, 0, 4, 589838, 0, 4, 655374, 0, 4, -589809, 0, 4, -524273, 0, 4, -458737, 0, 4, -393201, 0, 4, -327665, 0, 4, -262129, 0, 4, -196593, 0, 4, -131057, 0, 4, -65521, 0, 4, 15, 0, 4, 65551, 0, 4, 131087, 0, 4, 196623, 0, 4, 262159, 0, 4, 327695, 0, 4, 393231, 0, 4, 458767, 0, 4, 524303, 0, 4, 589839, 0, 4, 655375, 0, 4, -589808, 0, 4, -524272, 0, 4, -458736, 0, 4, -393200, 0, 4, -327664, 0, 4, -262128, 0, 4, -196592, 0, 4, -131056, 0, 4, -65520, 0, 4, 16, 0, 4, 65552, 0, 4, 131088, 0, 4, 196624, 0, 4, 262160, 0, 4, 327696, 0, 4, 393232, 0, 4, 458768, 0, 4, 524304, 0, 4, 589840, 0, 4, 655376, 0, 4, -589843, 0, 4, -524307, 0, 4, -458771, 0, 4, -393235, 0, 4, -327699, 0, 4, -262163, 0, 4, -196627, 0, 4, -131091, 0, 4, -65555, 0, 4, -19, 0, 4, 65517, 0, 4, 131053, 0, 4, 196589, 0, 4, 262125, 0, 4, 327661, 0, 4, 393197, 0, 4, 458733, 0, 4, 524269, 0, 4, 589805, 0, 4, 655341, 0, 4, 720877, 0, 4, -589842, 0, 4, -589841, 0, 4, -589840, 0, 4, -589839, 0, 4, -589838, 0, 4, -589837, 0, 4, -589836, 0, 4, -589835, 0, 4, -589834, 0, 4, -589833, 0, 4, -589832, 0, 4, -589831, 0, 4, -589830, 0, 4, -589829, 0, 4, -589828, 0, 4, -589827, 0, 4, -589826, 0, 4, -589825, 0, 4, -655360, 0, 4, -655359, 0, 4, -655358, 0, 4, -655357, 0, 4, -655356, 0, 4, -655355, 0, 4, -655354, 0, 4, -655353, 0, 4, -655352, 0, 4, -655351, 0, 4, -655350, 0, 4, -655349, 0, 4, -655348, 0, 4, -655347, 0, 4, -655346, 0, 4, -655345, 0, 4, -655344, 0, 4, -458735, 0, 4, -393199, 0, 4, -327663, 0, 4, -262127, 0, 4, -196591, 0, 4, -131055, 0, 4, -65519, 0, 4, 17, 0, 4, 65553, 0, 4, 131089, 0, 4, 196625, 0, 4, 262161, 0, 4, 327697, 0, 4, 393233, 0, 4, 458769, 0, 4, 524305, 0, 4, 589841, 0, 4, 655377, 0, 4, -458734, 0, 4, -393198, 0, 4, -327662, 0, 4, -262126, 0, 4, -196590, 0, 4, -131054, 0, 4, -65518, 0, 4, 18, 0, 4, 65554, 0, 4, 131090, 0, 4, 196626, 0, 4, 262162, 0, 4, 327698, 0, 4, 393234, 0, 4, 458770, 0, 4, 524306, 0, 4, 589842, 0, 4, 655378, 0, 4, -655343, 0, 4, -589807, 0, 4, -524271, 0, 4, -655342, 0, 4, -589806, 0, 4, -524270, 0, 4, -655379, 0, 4, -655378, 0, 4, -655377, 0, 4, -655376, 0, 4, -655375, 0, 4, -655374, 0, 4, -655373, 0, 4, -655372, 0, 4, -655371, 0, 4, -655370, 0, 4, -655369, 0, 4, -655368, 0, 4, -655367, 0, 4, -655366, 0, 4, -655365, 0, 4, -655364, 0, 4, -655363, 0, 4, -655362, 0, 4, -655361, 0, 4, -720896, 0, 4, -720895, 0, 4, -720894, 0, 4, -720893, 0, 4, -720892, 0, 4, -720891, 0, 4, -720890, 0, 4, -720889, 0, 4, -720888, 0, 4, -720887, 0, 4, -720886, 0, 4, -720885, 0, 4, -720884, 0, 4, -720883, 0, 4, -720882, 0, 4, -720881, 0, 4, -720880, 0, 4, -720879, 0, 4, -720878, 0, 4)

[node name="LeftDoor" type="Node2D" parent="."]
position = Vector2(-277, 0)
script = ExtResource("2_85l8b")

[node name="TypedWord" parent="LeftDoor" instance=ExtResource("2_hr713")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -4.0
offset_right = 26.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
highlight_first = false
word = "left"

[node name="RightDoor" type="Node2D" parent="."]
position = Vector2(272, 0)
script = ExtResource("2_85l8b")
dir = Vector2i(1, 0)

[node name="TypedWord" parent="RightDoor" instance=ExtResource("2_hr713")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -4.0
offset_right = 26.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
highlight_first = false
word = "right"

[node name="UpDoor" type="Node2D" parent="."]
position = Vector2(0, -158)
script = ExtResource("2_85l8b")
dir = Vector2i(0, -1)

[node name="TypedWord" parent="UpDoor" instance=ExtResource("2_hr713")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -4.0
offset_right = 26.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
highlight_first = false
word = "up"

[node name="DownDoor" type="Node2D" parent="."]
position = Vector2(0, 152)
script = ExtResource("2_85l8b")
dir = Vector2i(0, 1)

[node name="TypedWord" parent="DownDoor" instance=ExtResource("2_hr713")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -4.0
offset_right = 26.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
highlight_first = false
word = "down"

[node name="EnemySpawner" type="Node2D" parent="." node_paths=PackedStringArray("data", "tile_map")]
script = ExtResource("5_ucxci")
enemy_scene = ExtResource("6_6hvwm")
enemy_spawner_scene = ExtResource("7_13au6")
enemy_thrower_scene = ExtResource("8_mflrm")
spawner_enemy_chance = 0.0
throw_enemy_chance = 0.0
data = NodePath("../DataManager")
tile_map = NodePath("../TileMap")

[node name="DataManager" type="Node" parent="."]
script = ExtResource("9_eau8a")
